# opengaia

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  governance.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  roadmap.md
docs/tutorials/: writing_a_module.md
examples/: mvp_demo.py
examples/configs/: ai_governance_2030.yaml  climate_adaptation_investment.yaml  geoengineering_2035.yaml
opengaia/: __init__.py  cli.py
opengaia/adapters/: README.md  __init__.py  earth2studio.py
opengaia/core/: __init__.py  coupling_engine.py  scenario_runner.py  xarray_state.py
opengaia/data/: README.md  __init__.py
opengaia/eval/: __init__.py
opengaia/physics_bio/: __init__.py  climate_emulator.py
opengaia/safety_sandbox/: __init__.py  interventions.py  sandbox.py
opengaia/scripts/: __init__.py
opengaia/socio_economic/: __init__.py  agents.py  demographics.py  migration.py
opengaia/tech_innovation/: __init__.py  ai_capability.py  rd_investment.py  tech_diffusion.py
opengaia/ui_viz/: __init__.py
tests/: test_coupling_engine.py  test_earth2studio.py  test_safety_sandbox.py  test_scenario_runner.py  test_socio_economic.py  test_tech_innovation.py  test_xarray_state.py
