[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opengaia"
version = "0.2.1"
description = "OpenGaia: An open-source planetary-scale simulator coupling Earth systems, human societies, technology, and governance for foresight and decision-making."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "OpenGaia Contributors"},
]
keywords = [
    "planetary-simulation", "digital-twin", "earth-system-model", 
    "agent-based-modeling", "climate-emulator", "foresight", 
    "agi-safety", "socio-economic-simulation", "world-model"
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Sociology",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "xarray>=2023.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer[all]>=0.9",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
ml = [
    "torch>=2.0",
    "transformers>=4.30",
]
viz = [
    "plotly>=5.15",
    "folium>=0.14",
]
ui = [
    "gradio>=4.0",
]
full = [
    "opengaia[ml,viz,ui,dev]",
]

[project.scripts]
opengaia = "opengaia.cli:app"

[project.urls]
Homepage = "https://github.com/nulllabtests/opengaia"
Documentation = "https://github.com/nulllabtests/opengaia/tree/main/docs"
Repository = "https://github.com/nulllabtests/opengaia"
Issues = "https://github.com/nulllabtests/opengaia/issues"

[tool.hatch.build.targets.wheel]
packages = ["opengaia"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]